--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-jsx-parser": "^1.29.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
